--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.5",
     "@vue/cli-plugin-eslint": "^4.5.14",
+    "axios": "^0.23.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "swiper": "^6.7.0",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
