--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.23.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "sass": "^1.44.0",
     "swiper": "^6.7.0",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
@@ -31,7 +32,6 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
